# meridian

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  bacon.toml
.claude/: settings.json
config/: config.yml
crates/core/: Cargo.toml
crates/data/: Cargo.toml
crates/exchange/: Cargo.toml
crates/execution/: Cargo.toml
crates/portfolio/: Cargo.toml
crates/strategy/: Cargo.toml
