[package]
name = "meridian"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
rayon = "1.11.0"
reqwest = "0.12.24"
rust_decimal = "1.39.0"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
