[package]
name = "meridian"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

# Shared dependencies for the workspace
[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP & WebSocket
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Financial math - CRITICAL: never use f64 for money
rust_decimal = { version = "1.39", features = ["serde", "maths"] }
rust_decimal_macros = "1.39"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Alpaca API client (well-maintained, async-native)
apca = "0.30"

# Technical analysis (optional - we'll implement basics ourselves for learning)
# yata = "0.4"  # Uncomment when needed

# Data structures
indexmap = { version = "2.7", features = ["serde"] }  # Ordered maps like barter-rs
parking_lot = "0.12"  # Faster mutexes
dashmap = "6.1"  # Concurrent hashmap

# Configuration
dotenvy = "0.15"  # Load .env files
config = "0.15"  # Configuration management

# Database (optional - enable when ready)
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "rust_decimal"] }

# Metrics & monitoring
# metrics = "0.24"
# metrics-exporter-prometheus = "0.16"

# Testing
mockall = "0.13"  # Mock trait implementations

# UUID for order IDs
uuid = { version = "1.16", features = ["v4", "serde"] }

[dependencies]
# Root crate dependencies (for the main binary)
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

# Our crates
meridian-core = { path = "crates/core" }
meridian-exchange = { path = "crates/exchange" }
meridian-data = { path = "crates/data" }
meridian-strategy = { path = "crates/strategy" }
meridian-execution = { path = "crates/execution" }
meridian-portfolio = { path = "crates/portfolio" }
# meridian-storage = { path = "crates/storage" }  # Enable when ready

[dev-dependencies]
mockall.workspace = true
