[package]
name = "meridian-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling
thiserror.workspace = true

# Financial math
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

# Time
chrono.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Data structures
indexmap.workspace = true
uuid.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
