[package]
name = "meridian-execution"
version = "0.1.0"
edition = "2024"

[dependencies]
meridian-core = { path = "../core" }
meridian-exchange = { path = "../exchange" }

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# Financial math
rust_decimal.workspace = true

# Data structures
dashmap.workspace = true
uuid.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
