[package]
name = "meridian-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
meridian-core = { path = "../core" }

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

# Financial math
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
